cabal-version:       2.2

name:                haskell-99problems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/piroo01/haskell-99problems#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tomáš Macháček
maintainer:          piroot01@gmail.com
copyright:           2025 Tomáš Macháček
category:            Development
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable haskell-99problems
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
